# ally-agent

./: .gitignore  AGENTS.md  CAPSTONE_SPEC.md  README.md  pyproject.toml
afripay/: cli.py  generator.py
analysis/: rules.yaml
frameworks/: at.json  paystack.json
providers/: mpesa.json
src/ally/: __init__.py  __main__.py  analyzer.py  cli.py  server.py
tests/: test_analyzer.py  test_cli.py  test_cli_integration.py  test_generator.py  test_server.py
web/: index.html
