[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ally"
version = "0.1.0"
description = "Community voice and accountability agent for anonymous rights reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "openai",
    "pypdf",
    "pyyaml",
    "python-multipart",
    "rich",
    "typer",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-httpx",
]

[project.scripts]
ally = "ally.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
